
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd 0.9.x

  - Fixed a bug that caused the daemon to leak file descriptors when no
    resolver subprocesses could be created.
  - Fixed server NOTICEs to users with "s" mode ("server messages").
  - Fixed a format string bug in "connection statistics" messages to clients.

ngIRCd 0.9.1 (2005-08-03)

  - The KILL command killed much more than desired (including server links!)
    when the target user is connected to a remote server. Bug introduced in
    ngIRCd 0.9.0 ...  Reported by <qssl@fastmail.fm>, Thanks!
  - Changed some constants to be "signed" (instead of unsigned) to solve
    problems with old (pre-ANSI) compilers.

ngIRCd 0.9.0 (2005-07-24)

  ngIRCd 0.9.0-pre1 (2005-07-09)
  - Fixed maximum length of user names, now allow up to 9 characters.
  - Cut off oversized IRC messages that should be sent to the network instead
    of shuttding down the (wrong) connection.
  - Don't generate error messages for unknown commands received before the
    client is registered with the server (like the original ircd).
  - Never run with root privileges but always switch the user ID.
  - Make "netsplit" messages RFC compliant.
  - Fix handling of QUIT Messages: send only one message, even if the client
    is member of multiple channels.
  - Don't exit server if closing of a socket fails; instead ignore it and
    pray that this will be "the right thing" ...
  - Implemented the IRC function "WHOWAS".
  - Don't enable assert() calls when not ./configure'd with --enable-debug.
  - Fixed ./configure test for TCP Wrappers: now it runs on Mac OS X as well.
  - Enhanced configure script: now you can pass an (optional) search path