@@ -12,6 +12,8 @@
 
 ngIRCd 0.9.x
 
+  - Fixed a bug that could cause the damon to crash when outgoing server
+    connections can't be established.
   - Fixed a bug that caused the daemon to leak file descriptors when no
     resolver subprocesses could be created.
   - Fixed server NOTICEs to users with "s" mode ("server messages").
@@ -627,4 +629,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.276.2.10 2005/09/02 22:10:58 alex Exp $
+$Id: ChangeLog,v 1.276.2.11 2005/10/11 19:28:47 alex Exp $
